Bug 481149 - After using Kwin - Move Window keyboard shortcut causes cursor to be in the wrong position
Summary: After using Kwin - Move Window keyboard shortcut causes cursor to be in the w...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: 5.93.0
Platform: NixOS Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-09 23:24 UTC by arcinthesky
Modified: 2024-02-19 15:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description arcinthesky 2024-02-09 23:24:13 UTC
STEPS TO REPRODUCE
1. Trigger the keyboard shortcut to move a Window (for example, Dolphin or Firefox)
2. Move Window to any other spot on the desktop, and left click the mouse.
3. Now the window is in a new spot, move the mouse around and you will see it is pointing at things that are not under the cursor.

OBSERVED RESULT
Mouse cursor does not match the physical location within the window. In order to get your mouse back to be pointing at the correct spot of the Window, you have to move the cursor out of the window, and then move the mouse back into the window.

EXPECTED RESULT
Mouse cursor should be interacting with elements that are directly under the mouse cursor within the window.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: NixOS 24.05 (nixos-unstable)
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.114.0
Qt Version: 5.15.12

ADDITIONAL INFORMATION
This bug is also in Plasma 6 RC2.
Comment 1 fanzhuyifan 2024-02-10 00:54:52 UTC
Can reproduce on arch, source build from master, wayland. 

Note: this happens when the initial window isn't maximized.
Comment 2 fanzhuyifan 2024-02-19 01:33:54 UTC
The problem seems to be the surface getting a wl_pointer.enter event when the move starts. This does not happen when the window is moved by holding down meta and dragging.
Comment 3 Bug Janitor Service 2024-02-19 07:10:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5230