pointer_input: don't update focused pointer surface during moveresize

When using keyboard shortcut or context menu to move/resize, buttons are
not pressed, so a surface enter event is incorrectly sent.

BUG: 481149